--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,19 @@
     margin-top: 20px;
     color: white;
 }
+.salsh{
+    margin-bottom: 12%;
+
+}
+.what h4{
+    text-align: center;
+    padding: 20px;
+
+}
+.what{
+    text-align: center;
+}
+.aboutUs{
+    text-align: center;
+    padding: 20px;
+}
